<resources>
    <string name="app_name">EventFinder</string>

    <!-- Экран входа -->
    <string name="greeting_greeting">Здравствуйте!</string>
    <string name="greeting_info">Войдите в аккаунт или создайте новый</string>
    <string name="greeting_signIn">Войти</string>
    <string name="greeting_signUp">Нет аккаунта? Создайте</string>

    <!-- Домашний экран -->
    <string name="home_findEvent">Найти события в</string>
    <string name="home_popularEvent">Сейчас популярно</string>
    <string name="home_soonEvent">Актуальные события</string>
    <string name="home_freeEvent">Бесплатное посещение</string>
    <string name="home_popularEvents">Самые просматриваемые</string>
    <string name="home_endWithEvent">до</string>
    <string-array name="home_cityList">
        <item>Москве</item>
        <item>Санкт-Петербурге</item>
        <item>Екатеринбурге</item>
        <item>Казани</item>
        <item>Нижнем Новгороде</item>
    </string-array>
    <string-array name="home_cityListAPI">
        <item>msk</item>
        <item>spb</item>
        <item>ekb</item>
        <item>kzn</item>
        <item>nnv</item>
    </string-array>

    <!-- Экран просмотра события -->
    <string name="event_textButton">Посмотреть на картах</string>
    <string name="event_price">Цена</string>
    <string name="event_description">Описание</string>
    <string name="event_subway">метро</string>
    <string name="event_freePrice">Бесплатно!</string>
    <string name="event_location">Адресс:</string>
    <string name="event_emptyPlace">не указано</string>
    <string name="event_daysPlace">Дни:</string>
    <string name="place_contacts">Контактная информация:</string>

    <!-- Экран поиска -->
    <string name="search_find">Поиск</string>
    <string name="search_category1">События</string>
    <string name="search_category2">Места</string>
    <string name="search_category3">Новости</string>
    <string name="search_found">Найдено в</string>

    <!-- Экран фильтров -->
    <string name="slider_label_formatter">%1$s</string>

    <string name="filter_contentType">Тип контента</string>
    <string name="filter_contentTypeEvents">События</string>
    <string name="filter_contentTypePlaces">Места</string>
    <string name="filter_city">Город</string>
    <string name="filter_cityHint">Выберите город</string>
    <string name="filter_price">Цена</string>
    <string name="filter_priceIsFree">Только бесплатные</string>
    <string name="filter_categories">Категории</string>
    <string name="filter_sortBy">Сортировать по</string>
    <string name="filter_sortByPopularity">Популярности</string>
    <string name="filter_sortByDate">Дате события</string>
    <string name="filter_sortByPublication">Дате публикации</string>
    <string name="filter_showNumber">Показывать по</string>
    <string name="filter_buttonApply">Применить</string>
    <string name="filter_buttonReset">Сбросить</string>

    <!-- Экран Избранного -->
    <string name="favorite_info">Избранное</string>
    <string name="favorite_events">События</string>
    <string name="favorite_places">Места</string>
    <string name="favorite_tabEvents">События</string>
    <string name="favorite_tabPlaces">Места</string>
    <string name="favorite_anauthorisedInfo">Авторизуйтесь, чтобы просмотреть свой\nсписок избранного</string>

    <!-- Экран Профиля (не авторизован) -->
    <string name="profile_greeting">Здравствуйте!</string>
    <string name="profile_info">Войдите в аккаунт или создайте новый</string>
    <string name="profile_singIn">Войти</string>
    <string name="profile_singUp">Нет аккаунта? Создайте</string>
    <string name="profile_LogOut">Выйти</string>

    <!-- Экран Профиля (авторизован) -->
    <string name="profile_settings">Настройки</string>

    <!-- SharedPref экран -->
    <string name="pref_cityName">Основной город поиска</string>
    <string name="pref_cityChose">Выберите город</string>
    <string name="pref_languageName">Язык интерфейса</string>
    <string name="pref_languageChose">Выберте язык</string>
    <string name="pref_nickname">Никнейм</string>
    <string name="pref_nicknameChose">Изменить никнейм</string>
    <string name="pref_stayLoggedIn">Оставаться в системе</string>
    <string name="pref_stayLoggedInInfo">Оставаться в системе после выхода из приложения</string>

    <string-array name="pref_cityList">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Екатеринбург</item>
        <item>Казань</item>
        <item>Нижний Новгород</item>
    </string-array>
    <string-array name="pref_cityListId">
        <item>msk</item>
        <item>spb</item>
        <item>ekb</item>
        <item>kzn</item>
        <item>nnv</item>
    </string-array>

    <string-array name="pref_languageList">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_languageListId">
        <item>ru</item>
        <item>en</item>
    </string-array>


    <!-- Экран Регистрации -->
    <string name="profile_signUpInfo">Новый аккаунт</string>
    <string name="profile_signUpNickname">Псевдоним</string>
    <string name="profile_signUpNicknameEnter">Введи свой псевдоним</string>
    <string name="profile_signUpEmail">Электронная почта</string>
    <string name="profile_signUpPassword">Пароль</string>
    <string name="profile_signUpPasswordEnter">Введи свой пароль</string>
    <string name="profile_signUpPasswordRepeat">Повтори пароль</string>
    <string name="profile_signUpPasswordRepeatEnter">Повтори новый пароль</string>
    <string name="profile_signUpButton">Создать аккаунт</string>
    <string name="profile_signUpPasswordError">Пароли должны совпадать</string>
    <string name="profile_signUpNicknameError">Никнейм не может быть пустым</string>

    <!-- Экран Входа в аккаунт -->
    <string name="profile_signInInfo">Вход в аккаунт</string>
    <string name="profile_signInEmail">Электронная почта</string>
    <string name="profile_signInPassword">Пароль</string>
    <string name="profile_signInPasswordEnter">Введи свой пароль</string>
    <string name="profile_signInButton">Войти</string>
    <string name="profile_signInEmailError">Email не может быть пустым</string>
    <string name="profile_signInPasswordError">Пароль не может быть пустым</string>


    <!-- Toast-ы -->
    <string name="profile_toastNicknameGood">Никнейм обновлен</string>
    <string name="profile_toastNicknameBad">Ошибка обновления никнейма</string>
    <string name="profile_toastRegGood">Успешная регистрация</string>
    <string name="profile_toastRegBad">Ошибка регистрации</string>
    <string name="profile_toastAuthGood">Успешная авторизация</string>
    <string name="profile_toastAuthBad">Ошибка авторизации</string>

</resources>