<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    tools:context=".ui.fragments.FragmentGreeting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            style="@style/TextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting_greeting"
            android:gravity="center"/>

        <TextView
            style="@style/TextSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting_info"
            android:gravity="center"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/img_greeting"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <!-- Кнопки (нижняя часть) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/greeting_buttonSingIn"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting_signIn"/>

        <Button
            android:id="@+id/greeting_buttonSingUp"
            style="@style/ButtonSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting_signUp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>